@@ -105,7 +105,9 @@ namespace libtorrent {
 			|| (ip & 0xfff00000) == 0xac100000 // 172.16.x.x
 			|| (ip & 0xffff0000) == 0xc0a80000 // 192.168.x.x
 			|| (ip & 0xffff0000) == 0xa9fe0000 // 169.254.x.x
-			|| (ip & 0xff000000) == 0x7f000000); // 127.x.x.x
+			|| (ip & 0xff000000) == 0x7f000000 // 127.x.x.x
+			|| (ip & 0xffc00000) == 0x64400000 // 100.64.0.0/10
+			);
 	}
 
 	// TODO: this function is pointless
